home main section complete

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="login-signup">
-        <a href="#" class="logi login">
+        <a href="login-signup/login.html" class="logi login">
           <!-- <svg xmlns="http://www.w3.org/2000/svg" width="25" height="22" fill="currentColor" class="bi bi-lock"
           viewBox="0 0 16 16">
           <path
@@ -117,7 +117,7 @@
             Login
           </button>
         </a>
-        <a href="#" class="logi signup">
+        <a href="login-signup/signup.html" class="logi signup">
           <span class="material-symbols-outlined"> person </span>
           <!-- <p>Sign Up</p> -->
           <button class="btn" data-toggle="modal" data-target="#SignUpModal">
@@ -203,165 +203,8 @@
         </nav>
       </div>
     </div>
-    <!--Login Modal -->
-    <div
-      class="modal fade"
-      id="LoginModal"
-      tabindex="-1"
-      aria-labelledby="LoginModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel1">
-              Login to Banjara
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputName1">Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="exampleInputName1"
-                  aria-describedby="emailHelp"
-                />
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
-                />
-                <small id="emailHelp1" class="form-text text-muted"
-                  >We'll never share your email with anyone else.</small
-                >
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="exampleInputPassword1"
-                />
-              </div>
-              <div class="form-group form-check">
-                <input
-                  type="checkbox"
-                  class="form-check-input"
-                  id="exampleCheck1"
-                />
-                <label class="form-check-label" for="exampleCheck1"
-                  >Check me out</label
-                >
-              </div>
-              <button type="submit" class="btn btn-primary">Login</button>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Sign Up Modal -->
-    <div
-      class="modal fade"
-      id="SignUpModal"
-      tabindex="-1"
-      aria-labelledby="SignUpModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Get an Banjara Account
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputName">Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="exampleInputName"
-                  aria-describedby="emailHelp"
-                />
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail">Email address</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="exampleInputEmail"
-                  aria-describedby="emailHelp"
-                />
-                <small id="emailHelp" class="form-text text-muted"
-                  >We'll never share your email with anyone else.</small
-                >
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword">Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="exampleInputPassword"
-                />
-              </div>
-              <div class="form-group">
-                <label for="cexampleInputPassword">Confirm Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="cexampleInputPassword"
-                />
-              </div>
-              <button type="submit" class="btn btn-primary">
-                Create Account
-              </button>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
+   
+       
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
