--- a/About/about.html
+++ b/About/about.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="login-signup">
-        <a href="#" class="logi login">
+        <a href="../login-signup/login.html" class="logi login">
           <!-- <svg xmlns="http://www.w3.org/2000/svg" width="25" height="22" fill="currentColor" class="bi bi-lock"
           viewBox="0 0 16 16">
           <path
@@ -101,14 +101,14 @@
         </svg> -->
           <span class="material-symbols-outlined"> lock </span>
           <!-- <p>Login</p> -->
-          <button class="btn" data-toggle="modal" data-target="#LoginModal">
+          <button class="btn">
             Login
           </button>
         </a>
-        <a href="#" class="logi signup">
+        <a href="../login-signup/signup.html" class="logi signup">
           <span class="material-symbols-outlined"> person </span>
           <!-- <p>Sign Up</p> -->
-          <button class="btn" data-toggle="modal" data-target="#SignUpModal">
+          <button class="btn">
             Sign Up
           </button>
         </a>
