--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -57,13 +57,13 @@
             </div>
         </div>
         <div class="login-signup">
-            <a href="#" class="log login">
+            <a href="../login-signup/login.html" class="logi login">
                 <span class="material-symbols-outlined">
                     lock
                 </span>
                 <p>Login</p>
             </a>
-            <a href="#" class="log signup">
+            <a href="../login-signup/signup.html" class="logi signup">
                 <span class="material-symbols-outlined">
                     person
                 </span>
@@ -74,7 +74,7 @@
     <div class="nav-bar-bottom sticky-top">
         <div class="nav-bottom">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" id="logo-img" href="#"><img src="logo1.png" alt="logo" height="45px"></a>
+                <a class="navbar-brand" id="logo-img" href="#"><img src="../About/images/logo1.png" alt="logo" height="45px"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -97,14 +97,14 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="../Booking/booking.html">Domestic Trip</a>
-                                <a class="dropdown-item" href="#">International Trip</a>
+                                <a class="dropdown-item" href="../Booking/booking.html">International Trip</a>
                             </div>
                         </li>
                         <li class="nav-item mr-5">
-                            <a class="nav-link text-dark font-weight-bold" href="#">ABOUT US</a>
+                            <a class="nav-link text-dark font-weight-bold" href="../About/about.html">ABOUT US</a>
                         </li>
                         <li class="nav-item mr-5">
-                            <a class="nav-link text-dark font-weight-bold" href="../Contact/contact.html">CONTACT US</a>
+                            <a class="nav-link text-dark font-weight-bold" href="#">CONTACT US</a>
                         </li>
                     </ul>
                 </div>
@@ -165,22 +165,36 @@
         <div class="footer-child-1">
             <div id="call-us">
                 <h3>Call Us</h3>
-               <p> <span class="material-symbols-outlined" style="font-size: 20px;">call</span> +6-345-3456-233</p>
+                <p> <span class="material-symbols-outlined" style="font-size: 20px;">call</span> +6-345-3456-233</p>
                 <h3>Email</h3>
                 <p>Ask@banjara.com</p>
             </div>
             <div id="about-us">
                 <h3>About Us</h3>
-                <a href=""><p>Our Story</p></a>
-                <a href=""><p>Travel Blog & Tips</p></a>
-                <a href=""><p>Working With Us</p></a>
-                <a href=""><p>Be Our Partner</p></a>
+                <a href="">
+                    <p>Our Story</p>
+                </a>
+                <a href="">
+                    <p>Travel Blog & Tips</p>
+                </a>
+                <a href="">
+                    <p>Working With Us</p>
+                </a>
+                <a href="">
+                    <p>Be Our Partner</p>
+                </a>
             </div>
             <div id="Support">
                 <h3>Support</h3>
-                <a href=""><p>Customer Support</p></a>
-                <a href=""><p>Privacy & Policy</p></a>
-                <a href=""><p>Contact Channels</p></a>
+                <a href="">
+                    <p>Customer Support</p>
+                </a>
+                <a href="">
+                    <p>Privacy & Policy</p>
+                </a>
+                <a href="">
+                    <p>Contact Channels</p>
+                </a>
             </div>
             <div id="pay-us">
                 <h3>Pay Safely With Us</h3>
@@ -212,6 +226,15 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
