--- a/Destination/destination.html
+++ b/Destination/destination.html
@@ -423,7 +423,10 @@
         <!--  country card  -->
         <hr>
 <h1 style="text-align: center; font-size: 35px; margin: 25px;">Continent Wise Country</h1>
-        <div id="countrycardcontainer"></div>
+    <!-- <button id="sortingpricelow">Price Low To High</button>   
+    <button id="sortingpricehigh">Price High To Low</button>    -->
+
+<div id="countrycardcontainer"></div>
 
 
 
